# twofish

./: CMakeLists.txt  README.md  keyInstance.cpp  main.cpp  platform.h  table.h  twofish.cpp  twofish.h
tests/: iv.txt  key128.txt  key192.txt  key256.txt  tests.cpp
unitTest/: CMakeLists.txt  tests.cpp
vs17/twofish/Release/: twofish.iobj  twofish.ipdb
vs17/twofish/twofish/Debug/: keyinstance.obj.enc
vs17/twofish/twofish/Debug/twofish.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  twofish.lastbuildstate
vs17/twofish/twofish/Release/twofish.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  twofish.lastbuildstate  twofish.write.1u.tlog
vs17/twofish/twofish/x64/Debug/twofish.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  twofish.lastbuildstate
